# Fastcgi-Container

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  FastcgiContainerConfig.cmake.in  FastcgiContainerConfigVersion.cmake.in  INSTALL  Makefile.am  README  README.md  configure.in
authenticator/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  abstract_authenticator.cpp  abstract_authenticator.h  basic_authenticator.cpp  basic_authenticator.h  delegated_authenticator.cpp  delegated_authenticator.h  factory.cpp  form_authenticator.cpp  form_authenticator.h
authenticator/.deps/: abstract_authenticator.Plo  basic_authenticator.Plo  delegated_authenticator.Plo  factory.Plo  form_authenticator.Plo
config/: ax_boost_header.m4  ax_boost_lib.m4  ax_boost_prefix.m4  ax_boost_thread.m4  ax_check_cppunit.m4  ax_check_dmalloc.m4  ax_check_fastcgi.m4  ax_check_log4cxx.m4  settings.h  settings.h.in  stamp-h1
example/: .gitignore  CMakeLists.txt  Makefile.am  example.cpp  fastcgi.conf  handlers.xml  login.cpsp
example/pages/: build.sh  configure.in
example/pages/config/: ax_check_compiler_flags.m4
extra/: fastcgi-container3  fastcgistart3.sh
file-logger/: .gitignore  CMakeLists.txt  Makefile.am  file_logger.cpp  file_logger.h
include/: Makefile.am
include/details/: Makefile.am  component_context.h  componentset.h  config.h  data_buffer_impl.h  file_buffer.h  globals.h  handler_context.h  handlerset.h  loader.h  mmap_file.h  parser.h  request_cache.h  request_filter.h  request_thread_pool.h  response_time_statistics.h  security_authenticator.h  server.h  string_buffer.h  thread_pool.h  xml.h
include/fastcgi3/: Makefile.am  attributes_holder.h  component.h  component_factory.h  config.h  cookie.h  data_buffer.h  except.h  functors.h  handler.h  helpers.h  http_request.h  http_response.h  http_servlet.h  logger.h  range.h  request.h  request_io_stream.h  security_principal.h  security_realm.h  security_subject.h  session.h  session_manager.h  stream.h  util.h  xml.h
logging/: CMakeLists.txt  Makefile.am  logger.cpp  logger.h
main/: .gitignore  CMakeLists.txt  Makefile.am  endpoint.cpp  endpoint.h  fastcgi.conf.example  fcgi_request.cpp  fcgi_request.h  fcgi_server.cpp  fcgi_server.h  main.cpp
page-compiler/: .gitignore  CMakeLists.txt  Makefile.am  code_writer.cpp  code_writer.h  main.cpp  page.cpp  page.h  page_reader.cpp  page_reader.h  utils.cpp  utils.h
page-compiler/docs/: page_compiler.md
request-cache/: .gitignore  CMakeLists.txt  Makefile.am  file_buffer.cpp  file_buffer.h  file_cache.cpp  file_cache.h  mmap_file.cpp  mmap_file.h
session-manager/: .gitignore  CMakeLists.txt  Makefile.am  simple_session_manager.cpp  simple_session_manager.h
statistics/: .gitignore  CMakeLists.txt  Makefile.am  response_time_handler.cpp  response_time_handler.h
syslog/: .gitignore  CMakeLists.txt  Makefile.am  syslog-logger.cpp  syslog-logger.h
