AC_INIT([fastcgi3], [3.0], [contact@propulsion-analysis.com])
AM_INIT_AUTOMAKE(1.9)

AC_CONFIG_MACRO_DIR([config])

AC_GNU_SOURCE

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL

AC_LANG([C++])
AM_MAINTAINER_MODE

CPPFLAGS="-pthread"

for i in -W -Wall -Wextra -fexceptions -frtti -ftemplate-depth-128 -std=c++0x; do
	AX_CHECK_COMPILER_FLAGS([$i], [CXXFLAGS="$CXXFLAGS $i"], [])
done

LIBS=$stored_libs

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
