noinst_HEADERS = component_context.h componentset.h config.h \
	handler_context.h handlerset.h loader.h parser.h \
	xml.h data_buffer_impl.h string_buffer.h server.h request_cache.h \
	thread_pool.h request_thread_pool.h globals.h request_filter.h \
	security_authenticator.h \
	mmap_file.h file_buffer.h
