pkginclude_HEADERS = component.h component_factory.h config.h cookie.h except.h handler.h \
	helpers.h logger.h request.h stream.h util.h data_buffer.h request_io_stream.h \
	attributes_holder.h session.h session_manager.h http_servlet.h http_request.h http_response.h range.h functors.h \
	security_principal.h security_subject.h security_realm.h
